--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.6
   fl_chart: ^0.66.0
-
+  syncfusion_flutter_charts: ^28.2.7
   # Calendar
   table_calendar: ^3.0.8   # ✅ downgraded for intl compatibility
 
@@ -21,6 +21,7 @@ dependencies:
   cloud_firestore: ^5.4.4
   google_sign_in: ^6.2.1
   firebase_messaging: ^15.0.4
+  firebase_database: ^11.0.0
 
   # Local storage
   hive: ^2.2.3
@@ -59,3 +60,5 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/graduation-hat.png
+    - assets/images/   # ✅ include entire images folder
+   
